[workspace]
resolver = "2"

members = [
	"awk",
	"calc",
	"cron",
	"datetime",
	"dev",
	"display",
	"file",
	"fs",
	"ftw",
	"make",
	"m4",
	"m4/test-manager",
	"gettext-rs",
	"misc",
	"pathnames",
	"plib",
	"process",
	"sccs",
	"screen",
	"sh",
	"sys",
	"text",
	"tree",
	"users",
	"xform",
	"i18n",
	"cron",
]

[workspace.package]
repository = "https://github.com/rustcoreutils/posixutils-rs"
license = "MIT"
edition = "2021"
rust-version = "1.84.0"

[workspace.dependencies]
clap = { version = "4", default-features = false, features = ["std", "derive", "help", "usage", "error-context", "cargo"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
chrono-tz = "0.10.0"
libc = "0.2"
regex = "1.10"
gettext-rs = { path = "./gettext-rs" }
errno = "0.3"
tempfile = "3.14"

[workspace.lints]

