[workspace]
resolver = "2"

members = [
	"awk",
	"calc",
	"cc",
	"cron",
	"datetime",
	"dev",
	"display",
	"editors",
	"file",
	"fs",
	"ftw",
	"make",
	"man",
	"m4",
	"gettext-rs",
	"mailx",
	"misc",
	"pathnames",
	"pax",
	"plib",
	"print",
	"process",
	"sccs",
	"screen",
	"sh",
	"sys",
	"text",
	"tree",
	"users",
	"uucp",
	"xform",
	"i18n",
]

[workspace.package]
repository = "https://github.com/rustcoreutils/posixutils-rs"
license = "MIT"
edition = "2021"
rust-version = "1.84.0"

[workspace.dependencies]
clap = { version = "4", default-features = false, features = ["std", "derive", "help", "usage", "error-context", "cargo"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
chrono-tz = "0.10.0"
libc = "0.2"
regex = "1.10"
gettext-rs = { path = "./gettext-rs" }
errno = "0.3"
tempfile = "3"
dirs = "5"
thiserror = "1"
pest = { version = "2", default-features = false }
pest_derive = "2"

[workspace.lints.rust]
# Allow `cfg(coverage)` which is set by cargo-llvm-cov during coverage builds
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)'] }

