[package]
name = "posixutils-awk"
version = "0.2.2"
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
gettext-rs.workspace = true
clap.workspace = true
libc.workspace = true
pest = "2.7"
pest_derive = "2.7"
lazy_static = "1.4"
lexical = { version = "6.1", features = ["format"] }
rand = {version = "0.8", default-features = false, features = ["small_rng"] }

[dev-dependencies]
plib = { path = "../plib" }

[lints]
workspace = true

[[bin]]
name = "awk"
path = "src/main.rs"
