[package]
name = "posixutils-awk"
version = "0.7.0"
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
gettext-rs.workspace = true
clap.workspace = true
libc.workspace = true
pest = "2.7"
pest_derive = "2.7"
lexical = { version = "6.1", features = ["format"] }
plib = { path = "../plib" }
rand = { version = "0.8", default-features = false, features = ["small_rng"] }

[dev-dependencies]
plib = { path = "../plib" }

[lints]
workspace = true

[[bin]]
name = "awk"
path = "main.rs"
