[package]
name = "posixutils-awk"
version = "0.7.0"
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
gettext-rs.workspace = true
clap.workspace = true
libc.workspace = true
pest.workspace = true
pest_derive.workspace = true
lexical = { version = "7", features = ["format"] }
plib = { path = "../plib" }
rand = { version = "0.8", default-features = false, features = ["small_rng"] }


[lints]
workspace = true

[[bin]]
name = "awk"
path = "main.rs"
