[package]
name = "posixutils-calc"
version = "0.2.2"
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
gettext-rs.workspace = true
regex.workspace = true
clap.workspace = true
pest = { version = "2.7", default-features = false }
pest_derive = "2.7"
bigdecimal = "0.4"
rustyline = { version = "14.0", default-features = false }

[dev-dependencies]
plib = { path = "../plib" }

[lints]
workspace = true

[[bin]]
name = "expr"
path = "./expr.rs"

[[bin]]
name = "bc"
path = "./bc.rs"
