[package]
name = "posixutils-calc"
version = "0.7.0"
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
gettext-rs.workspace = true
regex.workspace = true
clap.workspace = true
pest = { workspace = true, default-features = false }
pest_derive.workspace = true
bigdecimal = "0.4"
rustyline = { version = "14.0", default-features = false }

[dev-dependencies]
plib = { path = "../plib" }

[lints]
workspace = true

[[bin]]
name = "expr"
path = "./expr.rs"

[[bin]]
name = "bc"
path = "./bc.rs"
