[package]
name = "posixutils-cc"
version = "0.2.2"
authors = ["Jeff Garzik"]
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
bitflags = "2"
clap.workspace = true
gettext-rs.workspace = true
plib = { path = "../plib" }

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "pcc"
path = "./main.rs"

