[package]
name = "posixutils-cc"
version = "0.7.0"
authors = ["Jeff Garzik"]
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
bitflags = "2"
clap.workspace = true
gettext-rs.workspace = true
plib = { path = "../plib" }

[dev-dependencies]
tempfile = "3"

[features]
# Enable full compile matrix (4 configs) instead of default single config (-O -g)
test_matrix = []

[lib]
name = "posixutils_cc"
path = "./lib.rs"

[[bin]]
name = "pcc"
path = "./main.rs"

[[bin]]
name = "cflow"
path = "./cflow.rs"

[[bin]]
name = "ctags"
path = "./ctags.rs"

[[bin]]
name = "cxref"
path = "./cxref.rs"

