[package]
name = "posixutils-datetime"
version = "0.2.1"
authors = ["Jeff Garzik"]
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
plib = { path = "../plib" }
clap.workspace = true
gettext-rs.workspace = true
chrono.workspace = true
libc.workspace = true
tr.workspace = true
gettext = "0.4.0"
sys-locale = "0.3.1"
fluent-langneg = "0.14.1"

[lints]
workspace = true

[[bin]]
name = "cal"
path = "./cal.rs"

[[bin]]
name = "date"
path = "./date.rs"

[[bin]]
name = "sleep"
path = "./sleep.rs"

[[bin]]
name = "time"
path = "./time.rs"
