[package]
name = "posixutils-datetime"
version = "0.7.0"
authors = ["Jeff Garzik"]
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
clap.workspace = true
gettext-rs.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
libc.workspace = true

[dev-dependencies]
plib = { path = "../plib" }

[lints]
workspace = true

[[bin]]
name = "cal"
path = "./cal.rs"

[[bin]]
name = "date"
path = "./date.rs"

[[bin]]
name = "sleep"
path = "./sleep.rs"

[[bin]]
name = "time"
path = "./time.rs"
