[package]
name = "posixutils-dev"
version = "0.1.11"
edition = "2021"
authors = ["Jeff Garzik"]
license = "MIT"
repository = "https://github.com/rustcoreutils/posixutils-rs.git"

[dependencies]
plib = { path = "../plib" }
clap.workspace = true
gettext-rs.workspace = true
object =  { version = "0.35", features = ["read", "build", "elf"]}
chrono.workspace = true
ar = "0.9"

[[bin]]
name = "nm"
path = "src/nm.rs"

[[bin]]
name = "ar"
path = "src/ar.rs"
required-features = ["object/read_core", "object/archive"]

[[bin]]
name = "strip"
path = "src/strip.rs"

[[bin]]
name = "strings"
path = "src/strings.rs"
