[package]
name = "posixutils-dev"
version = "0.2.2"
authors = ["Jeff Garzik"]
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
clap.workspace = true
gettext-rs.workspace = true
object =  { version = "0.35", features = ["read", "build", "elf"]}
chrono.workspace = true
ar = "0.9"

[dev-dependencies]
plib-testing.workspace = true

[lints]
workspace = true

[[bin]]
name = "nm"
path = "./nm.rs"

[[bin]]
name = "ar"
path = "./ar.rs"
required-features = ["object/read_core", "object/archive"]

[[bin]]
name = "strip"
path = "./strip.rs"

[[bin]]
name = "strings"
path = "./strings.rs"
