[package]
name = "posixutils-display"
version = "0.2.2"
authors = ["Jeff Garzik"]
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
clap.workspace = true
clap.features = ["env"]
gettext-rs.workspace = true
libc.workspace = true
termion = "4.0"
thiserror = "1.0"

[dev-dependencies]
plib = { path = "../plib" }

[lints]
workspace = true

[[bin]]
name = "echo"
path = "./echo.rs"

[[bin]]
name = "printf"
path = "./printf.rs"

[[bin]]
name = "more"
path = "./more.rs"
