[package]
name = "posixutils-display"
version = "0.2.2"
authors = ["Jeff Garzik"]
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
clap.workspace = true
clap.features = ["env"]
gettext-rs.workspace = true
libc.workspace = true
pest = "2.7"
pest_derive = "2.7"
termion = "4.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["unstable-locales"] }
regex.workspace = true
terminfo = "0.9.0"
lazy_static = "1.4"

[dev-dependencies]
plib = { path = "../plib" }
rstest = "0.25.0"

[lints]
workspace = true

[[bin]]
name = "echo"
path = "./echo.rs"

[[bin]]
name = "printf"
path = "./printf.rs"

[[bin]]
name = "man"
path = "./man.rs"

[[bin]]
name = "more"
path = "./more.rs"
