[package]
name = "posixutils-display"
version = "0.7.0"
authors = ["Jeff Garzik"]
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
clap = { workspace = true, features = ["env"] }
gettext-rs.workspace = true
libc.workspace = true
plib = { path = "../plib" }
termion = "4.0"
thiserror.workspace = true

[lints]
workspace = true

[[bin]]
name = "echo"
path = "./echo.rs"

[[bin]]
name = "printf"
path = "./printf.rs"

[[bin]]
name = "more"
path = "./more.rs"
