[package]
name = "posixutils-editors"
version = "0.7.0"
authors = ["Jeff Garzik"]
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
clap.workspace = true
gettext-rs.workspace = true
termios = "0.3"
libc.workspace = true
regex.workspace = true
plib = { path = "../plib" }

[dev-dependencies]
tempfile = "3"
portable-pty = "0.9"

[lints]
workspace = true

[lib]
name = "vi_rs"
path = "./vi/lib.rs"

[[bin]]
name = "vi"
path = "vi_main.rs"

[[bin]]
name = "ex"
path = "ex_main.rs"

[[bin]]
name = "ed"
path = "ed_main.rs"

