[package]
name = "posixutils-file"
version = "0.1.12"
edition = "2021"
authors = ["Jeff Garzik"]
license = "MIT"
repository = "https://github.com/rustcoreutils/posixutils-rs.git"

[dependencies]
plib = { path = "../plib" }
clap.workspace = true
gettext-rs.workspace = true
libc.workspace = true
atty.workspace = true
regex.workspace = true
walkdir = "2"
users = "0.11"

[[bin]]
name = "cat"
path = "src/cat.rs"

[[bin]]
name = "od"
path = "src/od.rs"

[[bin]]
name = "cmp"
path = "src/cmp.rs"

[[bin]]
name = "dd"
path = "src/dd.rs"

[[bin]]
name = "split"
path = "src/split.rs"

[[bin]]
name = "tee"
path = "src/tee.rs"

[[bin]]
name = "file"
path = "src/file.rs"

[[bin]]
name = "find"
path = "src/find.rs"
