[package]
name = "posixutils-file"
version = "0.2.0"
edition = "2021"
authors = ["Jeff Garzik"]
license = "MIT"
repository = "https://github.com/rustcoreutils/posixutils-rs.git"

[dependencies]
plib = { path = "../plib" }
clap.workspace = true
gettext-rs.workspace = true
libc.workspace = true
atty.workspace = true
regex.workspace = true
walkdir = "2"
users = "0.11"

[[bin]]
name = "cat"
path = "./cat.rs"

[[bin]]
name = "od"
path = "./od.rs"

[[bin]]
name = "cmp"
path = "./cmp.rs"

[[bin]]
name = "dd"
path = "./dd.rs"

[[bin]]
name = "split"
path = "./split.rs"

[[bin]]
name = "tee"
path = "./tee.rs"

[[bin]]
name = "file"
path = "./file.rs"

[[bin]]
name = "find"
path = "./find.rs"

[[bin]]
name = "join"
path = "./join.rs"
