[package]
name = "posixutils-file"
version = "0.7.0"
authors = ["Jeff Garzik"]
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
plib = { path = "../plib" }
clap.workspace = true
gettext-rs.workspace = true
libc.workspace = true
regex.workspace = true
walkdir = "2"
users = "0.11"

[lints]
workspace = true

[[bin]]
name = "cat"
path = "./cat.rs"

[[bin]]
name = "od"
path = "./od.rs"

[[bin]]
name = "cmp"
path = "./cmp.rs"

[[bin]]
name = "dd"
path = "./dd.rs"

[[bin]]
name = "split"
path = "./split.rs"

[[bin]]
name = "tee"
path = "./tee.rs"

[[bin]]
name = "file"
path = "./file.rs"

[[bin]]
name = "find"
path = "./find.rs"
