[package]
name = "posixutils-fs"
version = "0.2.1"
authors = ["Jeff Garzik"]
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
plib = { path = "../plib" }
ftw = { path = "../ftw" }
clap.workspace = true
gettext-rs.workspace = true
libc.workspace = true

[lints]
workspace = true

[[bin]]
name = "df"
path = "./df.rs"
