[package]
name = "posixutils-fs"
version = "0.7.0"
authors = ["Jeff Garzik"]
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
clap.workspace = true
gettext-rs.workspace = true
libc.workspace = true

[dev-dependencies]
plib = { path = "../plib" }

[lints]
workspace = true

[[bin]]
name = "df"
path = "./df.rs"

[[test]]
name = "fs-tests"
path = "tests/fs-tests.rs"

