[package]
name = "ftw"
version = "0.7.0"
authors = ["Jeff Garzik"]
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
libc.workspace = true
errno.workspace = true

[dev-dependencies]
rand = "0.8.5"
tempfile = "3"

[lints]
workspace = true

[lib]
doctest = false
