[package]
name = "posixutils-i18n"
version = "0.2.2"
authors = ["Jeff Garzik"]
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
plib = { path = "../plib" }
clap.workspace = true
gettext-rs.workspace = true
bytemuck = { version = "1.17", features = ["derive"] }
byteorder = "1.5"
strum = "0.26"
strum_macros = "0.26"

[lints]
workspace = true

[[bin]]
name = "gencat"
path = "./gencat.rs"

[[bin]]
name = "iconv"
path = "./iconv.rs"
