[package]
name = "posixutils-i18n"
version = "0.7.0"
authors = ["Jeff Garzik"]
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
plib = { path = "../plib" }
posixutils-cc = { path = "../cc" }
clap.workspace = true
gettext-rs.workspace = true
libc.workspace = true
bytemuck = { version = "1.17", features = ["derive"] }
byteorder = "1.5"
strum = "0.26"
strum_macros = "0.26"
proc-macro2 = { version = "1", features = ["span-locations"] }
quote = "1"
syn = { version = "2", features = ["parsing", "full"] }

[dev-dependencies]
tempfile = "3.10"
pretty_assertions = "1.4"

[lib]
name = "posixutils_i18n"
path = "lib.rs"

[lints]
workspace = true

[[bin]]
name = "gencat"
path = "./gencat.rs"

[[bin]]
name = "iconv"
path = "./iconv.rs"

[[bin]]
name = "xgettext"
path = "./xgettext.rs"

[[bin]]
name = "gettext"
path = "./gettext.rs"

[[bin]]
name = "ngettext"
path = "./ngettext.rs"

[[bin]]
name = "msgfmt"
path = "./msgfmt.rs"

[[bin]]
name = "locale"
path = "./locale.rs"

[[bin]]
name = "localedef"
path = "./localedef.rs"
