[package]
name = "posixutils-link"
version = "0.1.2"
edition = "2021"
authors = ["Jeff Garzik"]
license = "MIT"
repository = "https://github.com/rustcoreutils/posixutils-rs.git"

[dependencies]
plib = { path = "../plib" }
clap = { version = "4", features = ["derive"] }
gettext-rs = { version = "0.7", features = ["gettext-system"] }

[[bin]]
name = "unlink"
path = "src/unlink.rs"

[[bin]]
name = "link"
path = "src/link.rs"

[[bin]]
name = "ln"
path = "src/ln.rs"

