[package]
name = "m4"
version = "0.1.0"
edition = "2021"
description = "m4 - macro language processor"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap.workspace = true
env_logger = "0.11"
errno = "0.3"
libc.workspace = true
log = "0.4"
nom = "7.1"
once_cell = "1.19"
thiserror = "1.0"

[dev-dependencies]
env_logger = "0.11"
m4-test-manager = { path = "./test-manager" }
regex-lite = "0.1"
similar-asserts = "1.5"
test-log = { version = "0.2", default-features=false, features=["log"]}

[build-dependencies]
m4-test-manager = { path = "./test-manager" }

