[package]
name = "posixutils-m4"
version = "0.7.0"
description = "m4 - macro language processor"
authors = ["Luke Frisken"]
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
clap.workspace = true
env_logger = "0.11"
errno.workspace = true
libc.workspace = true
log = "0.4"
nom = "7.1"
once_cell = "1.19"
thiserror = "1.0"

[dev-dependencies]
env_logger = "0.11"
m4-test-manager = { path = "./test-manager" }
regex-lite = "0.1"
similar-asserts = "1.5"
test-log = { version = "0.2", default-features=false, features=["log"]}

[build-dependencies]
m4-test-manager = { path = "./test-manager" }

[lints]
workspace = true

[[bin]]
name = "m4"
path = "src/main.rs"
