[package]
name = "posixutils-m4"
version = "0.7.0"
description = "m4 - macro language processor"
authors = ["Luke Frisken"]
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
clap.workspace = true
env_logger = "0.11"
errno.workspace = true
libc.workspace = true
log = "0.4"
nom = "7.1"
thiserror.workspace = true

[dev-dependencies]
env_logger = "0.11"
plib = { path = "../plib" }
regex-lite = "0.1"
similar-asserts = "1.5"
test-log = { version = "0.2", default-features=false, features=["log"]}

[lints]
workspace = true

[[bin]]
name = "m4"
path = "src/main.rs"
