[package]
name = "posixutils-mailx"
version = "0.7.0"
authors = ["Jeff Garzik"]
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
chrono.workspace = true
dirs.workspace = true
plib = { path = "../plib" }

[dev-dependencies]
tempfile = "3"
filetime = "0.2"

[lints]
workspace = true

[[bin]]
name = "mailx"
path = "./main.rs"

