[package]
name = "posixutils-make"
version = "0.7.0"
authors = ["Jeff Garzik"]
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
clap.workspace = true
libc.workspace = true
gettext-rs.workspace = true
const_format = "0.2"
rowan = "0.15"

[dev-dependencies]
plib = { path = "../plib" }

[lints]
workspace = true

[[bin]]
name = "make"
path = "src/main.rs"
