[package]
name = "posixutils-man"
version = "0.7.0"
authors = ["Jeff Garzik"]
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
clap = { workspace = true, features = ["env"] }
gettext-rs.workspace = true
libc.workspace = true
pest.workspace = true
pest_derive.workspace = true
thiserror.workspace = true
chrono = { version = "0.4", features = ["unstable-locales"] }
regex.workspace = true
terminfo = "0.9.0"
lazy_static = "1.4"

[dev-dependencies]
plib = { path = "../plib" }
rstest = "0.25.0"

[lints]
workspace = true

[[bin]]
name = "man"
path = "./man.rs"
