[package]
name = "posixutils-man"
version = "0.8.0"
authors = ["Jeff Garzik"]
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
clap = { workspace = true, features = ["env"] }
gettext-rs.workspace = true
libc.workspace = true
thiserror.workspace = true
chrono = { version = "0.4", features = ["unstable-locales"] }
plib = { path = "../plib" }
regex.workspace = true
terminfo = "0.9"

[dev-dependencies]
rstest = "0.25"

[lints]
workspace = true

[[bin]]
name = "man"
path = "./man.rs"
