[package]
name = "posixutils-misc"
version = "0.2.1"
edition = "2021"
authors = ["Jeff Garzik"]
license = "MIT"
repository = "https://github.com/rustcoreutils/posixutils-rs.git"

[dependencies]
plib = { path = "../plib" }
clap.workspace = true
libc.workspace = true
gettext-rs.workspace = true

[[bin]]
name = "true"
path = "./true.rs"

[[bin]]
name = "false"
path = "./false.rs"

[[bin]]
name = "test"
path = "./test.rs"
