[package]
name = "posixutils-misc"
version = "0.2.1"
authors = ["Jeff Garzik"]
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
clap.workspace = true
libc.workspace = true
gettext-rs.workspace = true

[dev-dependencies]
plib-testing.workspace = true

[lints]
workspace = true

[[bin]]
name = "true"
path = "./true.rs"

[[bin]]
name = "false"
path = "./false.rs"

[[bin]]
name = "test"
path = "./test.rs"
