[package]
name = "posixutils-pathnames"
version = "0.2.0"
edition = "2021"
authors = ["Jeff Garzik"]
license = "MIT"
repository = "https://github.com/rustcoreutils/posixutils-rs.git"

[dependencies]
plib = { path = "../plib" }
clap.workspace = true
gettext-rs.workspace = true
libc.workspace = true

[[bin]]
name = "basename"
path = "./basename.rs"

[[bin]]
name = "dirname"
path = "./dirname.rs"

[[bin]]
name = "pathchk"
path = "./pathchk.rs"

[[bin]]
name = "realpath"
path = "./realpath.rs"
