[package]
name = "posixutils-pathnames"
version = "0.2.1"
authors = ["Jeff Garzik"]
repository.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
plib = { path = "../plib" }
clap.workspace = true
gettext-rs.workspace = true
libc.workspace = true

[lints]
workspace = true

[[bin]]
name = "basename"
path = "./basename.rs"

[[bin]]
name = "dirname"
path = "./dirname.rs"

[[bin]]
name = "pathchk"
path = "./pathchk.rs"

[[bin]]
name = "realpath"
path = "./realpath.rs"
