[package]
name = "posixutils-pathnames"
version = "0.2.2"
authors = ["Jeff Garzik"]
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
clap.workspace = true
gettext-rs.workspace = true
libc.workspace = true

[dev-dependencies]
plib = { path = "../plib" }

[lints]
workspace = true

[[bin]]
name = "basename"
path = "./basename.rs"

[[bin]]
name = "dirname"
path = "./dirname.rs"

[[bin]]
name = "pathchk"
path = "./pathchk.rs"

[[bin]]
name = "realpath"
path = "./realpath.rs"
