[package]
name = "plib"
version = "0.2.1"
authors = ["Jeff Garzik"]
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
cfg-if = "1.0"
clap.workspace = true
gettext-rs.workspace = true
libc.workspace = true
errno.workspace = true

[lints]
workspace = true

[lib]
doctest = false
