[package]
name = "plib"
version = "0.2.1"
authors = ["Jeff Garzik"]
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
cfg-if = "1.0"
libc.workspace = true
errno.workspace = true
gettext = "0.4.0"
sys-locale = "0.3.1"
fluent-langneg = "0.14.1"
tr.workspace = true

[lints]
workspace = true

[lib]
doctest = false
