[package]
name = "plib"
version = "0.7.0"
authors = ["Jeff Garzik"]
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
cfg-if = "1.0"
libc.workspace = true
errno.workspace = true

[lints]
workspace = true

[lib]
doctest = false
