[package]
name = "posixutils-process"
version = "0.2.0"
edition = "2021"
authors = ["Jeff Garzik"]
license = "MIT"
repository = "https://github.com/rustcoreutils/posixutils-rs.git"

[dependencies]
plib = { path = "../plib" }
clap.workspace = true
gettext-rs.workspace = true
libc.workspace = true
atty.workspace = true
errno = "0.3"
dirs = "5.0"

[dev-dependencies]
nix = { version = "0.29", features = ["signal"] }
sysinfo = "0.31"

[[bin]]
name = "env"
path = "./env.rs"

[[bin]]
name = "kill"
path = "./kill.rs"

[[bin]]
name = "nice"
path = "./nice.rs"

[[bin]]
name = "nohup"
path = "./nohup.rs"

[[bin]]
name = "renice"
path = "./renice.rs"

[[bin]]
name = "timeout"
path = "./timeout.rs"

[[bin]]
name = "xargs"
path = "./xargs.rs"
