[package]
name = "posixutils-process"
version = "0.7.0"
authors = ["Jeff Garzik"]
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
plib = { path = "../plib" }
clap.workspace = true
gettext-rs.workspace = true
libc.workspace = true
chrono.workspace = true
dirs = "5.0"
chrono-tz.workspace = true

[build-dependencies]
bindgen = { version = "0.70.0", features = ["runtime"] }

[lints]
workspace = true

[dev-dependencies]
sysinfo = "0.31"

[lib]
path = "lib.rs"

[[bin]]
name = "batch"
path = "./batch.rs"

[[bin]]
name = "fuser"
path = "./fuser.rs"

[[bin]]
name = "env"
path = "./env.rs"

[[bin]]
name = "kill"
path = "./kill.rs"

[[bin]]
name = "nice"
path = "./nice.rs"

[[bin]]
name = "nohup"
path = "./nohup.rs"

[[bin]]
name = "renice"
path = "./renice.rs"

[[bin]]
name = "timeout"
path = "./timeout.rs"

[[bin]]
name = "xargs"
path = "./xargs.rs"
