[package]
name = "posixutils-sccs"
version = "0.2.2"
authors = ["Jeff Garzik"]
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
clap.workspace = true
gettext-rs.workspace = true

[dev-dependencies]
plib-testing.workspace = true

[lints]
workspace = true

[[bin]]
name = "what"
path = "./what.rs"
