[package]
name = "posixutils-sccs"
version = "0.7.0"
authors = ["Jeff Garzik"]
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
clap.workspace = true
gettext-rs.workspace = true
plib = { path = "../plib" }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true

[[bin]]
name = "what"
path = "./what.rs"

[[bin]]
name = "admin"
path = "./admin.rs"

[[bin]]
name = "get"
path = "./get.rs"

[[bin]]
name = "delta"
path = "./delta.rs"

[[bin]]
name = "val"
path = "./val.rs"

[[bin]]
name = "sact"
path = "./sact.rs"

[[bin]]
name = "unget"
path = "./unget.rs"

[[bin]]
name = "rmdel"
path = "./rmdel.rs"

[[bin]]
name = "prs"
path = "./prs.rs"

[[bin]]
name = "sccs"
path = "./sccs.rs"
