[package]
name = "posixutils-screen"
version = "0.2.1"
edition = "2021"
authors = ["Jeff Garzik"]
license = "MIT"
repository = "https://github.com/rustcoreutils/posixutils-rs.git"

[dependencies]
plib = { path = "../plib" }
clap.workspace = true
gettext-rs.workspace = true
terminfo = "0.8"
termios = "0.3"
libc.workspace = true

[[bin]]
name = "stty"
path = "./stty.rs"

[[bin]]
name = "tabs"
path = "./tabs.rs"

[[bin]]
name = "tput"
path = "./tput.rs"

