[package]
name = "posixutils-screen"
version = "0.2.1"
authors = ["Jeff Garzik"]
repository.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
plib = { path = "../plib" }
clap.workspace = true
gettext-rs.workspace = true
terminfo = "0.8"
termios = "0.3"
libc.workspace = true

[lints]
workspace = true

[[bin]]
name = "stty"
path = "./stty.rs"

[[bin]]
name = "tabs"
path = "./tabs.rs"

[[bin]]
name = "tput"
path = "./tput.rs"

