[package]
name = "posixutils-sh"
version = "0.1.7"
edition = "2021"

[dependencies]
#plib.workspace = true
gettext-rs.workspace = true
nix = { version = "0.29", features = ["process", "fs", "resource", "signal", "user", "term"] }
atty = "0.2"

[dev-dependencies]
plib-testing.workspace = true

[[bin]]
name = "sh"
path = "src/main.rs"
