[package]
name = "posixutils-shell"
version = "0.1.5"
edition = "2021"
authors = ["Jeff Garzik"]
license = "MIT"
repository = "https://github.com/rustcoreutils/posixutils-rs.git"

[dependencies]
plib = { path = "../plib" }
clap = { version = "4", features = ["derive"] }
gettext-rs = { version = "0.7", features = ["gettext-system"] }
libc = "0.2"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.0"
tempfile = "3.3"

[[bin]]
name = "sh"
path = "src/sh.rs"

