[package]
name = "posixutils-sys"
version = "0.2.1"
edition = "2021"
authors = ["Jeff Garzik"]
license = "MIT"
repository = "https://github.com/rustcoreutils/posixutils-rs.git"

[dependencies]
plib = { path = "../plib" }
clap.workspace = true
gettext-rs.workspace = true
uname = "0.1"
libc.workspace = true
chrono.workspace = true

[[bin]]
name = "getconf"
path = "./getconf.rs"

[[bin]]
name = "ipcrm"
path = "./ipcrm.rs"

[[bin]]
name = "ipcs"
path = "./ipcs.rs"

[[bin]]
name = "ps"
path = "./ps.rs"

[[bin]]
name = "uname"
path = "./uname.rs"

[[bin]]
name = "who"
path = "./who.rs"

